[package]
name = "ldap-utils"
description = "Implements some LDAP utility functionality around OpenLDAP config files and the ldap3 Rust library"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.3.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/ldap-utils"
keywords = [ "ldap", "schema", "ldap3" ]
categories = [ "parsing" ]
exclude = [ ".env", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.toml]
version = "0.8.8"

[dependencies.tracing]
version = "0.1.40"

[dependencies.ldap-types]
version = "0.3.0"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.diff-struct]
version = "0.5.3"

[dependencies.ldap3]
version = "0.11.3"
features = [ "tls" ]

[dependencies.chumsky]
version = "0.9.3"

[dependencies.openssl]
version = "0.10"

[dependencies.dirs2]
version = "3.0.1"

[dependencies.native-tls]
version = "0.2"

[dependencies.derive_builder]
version = "0.12.0"

[dependencies.regex]
version="1.10.0"

[dependencies.serde]
version = "1.0.195"
features = [ "derive" ]

[dependencies.itertools]
version = "0.12.0"

[dependencies.tokio]
version = "1.35.0"
features = [ "full" ]

[dependencies.oid]
version = "0.2.1"

[dependencies.thiserror]
version = "1.0.56"

#[patch.crates-io]
#ldap-types = { path = "../ldap-types" }
